# Solar-System

./: .gitignore  README.md
code/: CMakeLists.txt
code/Engine/: CMakeLists.txt  CameraExplorer.cpp  CameraFPS.cpp  CatmullRom.cpp  Grupo.cpp  Light.cpp  Model.cpp  ModelInfo.cpp  Parser.cpp  ViewFrustumCulling.cpp  main.cpp  tinyxml2.cpp
code/Engine/Transformation/: Rotate.cpp  RotateTime.cpp  Scale.cpp  Transformation.cpp  Translate.cpp  TranslateTime.cpp
code/Generator/: Box.cpp  CMakeLists.txt  Cone.cpp  ConicalFrustum.cpp  Cylinder.cpp  Icosahedron.cpp  Plane.cpp  Sphere.cpp  Teapot.cpp  Torus.cpp  Tube.cpp  main.cpp
code/Scenes/: SolarSystem.xml  SolarSystemAligned.xml  box.xml  cylinder.xml  dynamicSolarSystem.xml  dynamicSolarSystemInclination.xml  saturn.xml  teapot.xml  testeModel.xml  texturedSolarSystem.xml  textures.xml  torus.xml
code/Scenes/3dFiles/: Skybox.3d  asteroid3.3d  box.3d  lua.3d  planeta.3d  ring.3d  sol.3d  teapot.3d
code/Scripts/: DynamicSolarSystem.py  TexturedSolarSystem.py  createSolarSystem.py  lights.csv  solarSystem.json
code/Shared/: Maths.cpp  Point.cpp  Vec2.cpp
include/Engine/: BoundingVolume.h  BoxBoundingVolume.h  CameraExplorer.h  CameraFPS.h  CatmullRom.h  Grupo.h  Light.h  Model.h  ModelInfo.h  Parser.h  SphereBoundingVolume.h  ViewFrustumCulling.h
include/Engine/Transformation/: Rotate.h  RotateTime.h  Scale.h  Transformation.h  Translate.h  TranslateTime.h
include/Generator/: Box.h  Cone.h  ConicalFrustum.h  Cylinder.h  Icosahedron.h  Plane.h  Sphere.h  Teapot.h  Torus.h  Tube.h
include/Shared/: Maths.h  Point.h  Vec2.h
